k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: surveillance-system
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: surveillance-system
